Changes for 1.8.6rc1

 - [ZBX-3890] added logging of ORACLE warning messages while connecting to the database (Sasha)
 - [ZBX-3880] fixed repeated processing of log-files through proxy when disabling a host or item (Sasha)
 - [ZBX-3420] fixed wrong error message being logged in case of DNS resolution errors (asaveljevs,rudolfs)
 - [ZBX-3519] fixed unterminated processes when system.run[,wait] times out and added proper output handling for system.run[,nowait] on UNIX (rudolfs) 
 - [ZBX-3768] fixed 'uptime' and 's' units as according to the documentation (Sasha)
 - [ZBX-3490] added support for LVM devices and full path to devices to vfs.dev.read and vfs.dev.write; thanks to Takanori Suzuki (dimir, sasha)
 - [ZBX-3862] fixed broken popups in frontend in Internet Explorer 7 (KB)
 - [ZBX-3463] fixed MaxHousekeeperDelete configuration parameter being ignored for IBM DB2 (asaveljevs)
 - [ZBX-3854] added saving of state of dynamic/fixed setting for time lines on all pages (KB)
 - [ZBX-3847] fixed item history clearing not deleting data in trends_uint table (KB)
 - [ZBX-3797] fixed processing of vfs.dev.* checks under FreeBSD (Sasha)
 - [ZBXNEXT-799] added support of SRV records to net.tcp.dns.query[]; thanks to Edward Rudd (asaveljevs)
 - [ZBX-1029] added lookup of Jabber SRV records to Jabber notifications; thanks to Edward Rudd (asaveljevs)
 - [ZBXNEXT-792] added type parameter for system.hostname[] on Windows to support both NetBIOS and host names (rudolfs)
 - [ZBXNEXT-791] added HostnameItem to Agent and Proxy configuration for setting the default Hostname (rudolfs)
 - [ZBX-3192] fixed SNMP index cache to support SNMP target for each entry; thanks to Ilia Sotnikov (dimir)
 - [ZBX-3825] fixed errors with single quotes in javascript messages (KB)
 - [ZBXNEXT-782] added support of not-supported items in the history cache (Sasha)
 - [ZBX-3072] fixed MySQL error when shutting down server (dimir)
 - [ZBX-3105] added processing of garbage in configuration files (dimir)